I added #F2F2F2 background to the email

--- a/index.html
+++ b/index.html
@@ -90,14 +90,15 @@
 
     }
 
-    @media only screen and (max-width: 480px) {
+    @media only screen and (max-width: 430px) {
       .container {
         width: 100% !important;
       }
 
       table.col {
-        max-width: 100% !important;
+        max-width: 600px !important;
         width: 100% !important;
+        text-align: center !important;
       }
 
       img.logo {
@@ -115,7 +116,8 @@
       }
 
       .btn {
-        padding: 4px !important;
+        padding: 0px !important;
+        font-size: 16px !important;
       }
 
       .col-ls {
@@ -168,28 +170,11 @@
       <tr>
         <td>
           <table class="container" align="center" width="600" border="0" cellspacing="0" cellpadding="0"
-            role="presentation" style="background-color: #F2F2F2;">
-
-            <!-- header -->
-            <tr>
-              <td>
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
-                  <tr>
-                    <td style="background-color: #FFFFFF;">
-                      <p style="text-align: center;color: #000000;font-size: 16px;
-                        padding: 8px; margin: 0;">
-                      </p>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <!-- /header -->
-
+            role="presentation">
 
             <!-- Start of Hero Image -->
             <tr>
-              <td style="background-color: #FFFFFF;padding: 40px 24px 80px 24px;">
+              <td style="background-color: #F2F2F2;padding: 40px 24px 80px 24px;">
                 <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                   <tr>
                     <td align="center">
@@ -201,7 +186,7 @@
                       </a>
 
                       <h3 class="sub-header"
-                        style="padding: 0 0 16px 0;font-weight: 400;font-size: 20px;font-family: 'Poppins', sans-serif;color:#000000">
+                        style="padding: 0 0 16px 0;font-weight: 400;font-size: 18px;font-family: 'Poppins', sans-serif;color:#000000">
                         <span class="gmail-screen"><span class="gmail-difference">Helios Brings Your Products To
                             Light</span></span>
                       </h3>
@@ -212,7 +197,7 @@
                           <center style="color:#000000;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:bold;">Shop Now</center>
                         </v:roundrect>
                       <![endif]--><a class="btn" href="https://www.heliosproductions.com/"
-                          style="padding:6px;background-color:#FFFFFF;border:2px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:400;line-height:40px;text-align:center;text-decoration:none;width:180px;-webkit-text-size-adjust:none;mso-hide:all;">Explore
+                          style="padding:4px 0px;background-color:#F2F2F2;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:400;line-height:40px;text-align:center;text-decoration:none;width:180px;-webkit-text-size-adjust:none;mso-hide:all;">Explore
                           Now</a>
                       </div>
                       <!-- /CTA -->
@@ -246,10 +231,10 @@
 
             <!-- Start of Our Work Banner -->
             <tr>
-              <td style="padding:30px 24px;background-color:#FFFFFF;">
+              <td style="padding:30px 24px;background-color:#F2F2F2;">
                 <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                   <tr>
-                    <td style="background-color:#F2F2F2;padding:24px;line-height: 30px;">
+                    <td style="background-color:#e7e7e7;padding:24px;line-height: 30px;">
                       <h2
                         style="text-align: center; font-family: 'Poppins', sans-serif;color: #000000; margin: 10px;font-size: 22px;font-family: 'Poppins', sans-serif;font-weight: 600;">
                         Our Work
@@ -271,7 +256,7 @@
 
             <!-- Start of Divider -->
             <tr>
-              <td align="center" style="background-color: #FFFFFF;padding: 25px;">
+              <td align="center" style="background-color: #F2F2F2;padding: 25px;">
                 <hr style="border: 2px solid lightgrey;width: 200px;border-color: #6DB597;">
               </td>
             </tr>
@@ -279,13 +264,13 @@
 
             <!-- Start of Product Sections -->
             <tr>
-              <td style="padding: 20px 0px;background-color:#FFFFFF;">
+              <td style="padding: 20px 0px;background-color:#F2F2F2;">
                 <table class="container" align="center" width="100%" border="0" cellspacing="0" cellpadding="0"
                   role="presentation">
 
                   <!-- Start of Product -->
                   <tr>
-                    <td style="background-color: #FFFFFF;">
+                    <td style="background-color: #F2F2F2;">
                       <table class="col" align="left" width="50%" border="0" cellspacing="0" cellpadding="0"
                         role="presentation" style="padding: 24px;">
                         <tr>
@@ -303,7 +288,7 @@
                                 <center style="color:#000000;font-family: 'Poppins', sans-serif;font-size:16px;font-weight:500;">Product</center>
                               </v:roundrect>
                             <![endif]--><a href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj"
-                                style="padding:4px;background-color:#ffffff;border:2px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Product</a>
+                                style="padding:4px;background-color:#F2F2F2;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Product</a>
                             </div>
                             <!-- /CTA -->
                           </td>
@@ -329,7 +314,7 @@
                               </v:roundrect>
                             <![endif]--><a
                                 href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89"
-                                style="padding: 4px;background-color:#ffffff;border:2px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Apparel</a>
+                                style="padding: 4px;background-color:#F2F2F2;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Apparel</a>
                             </div>
                             <!-- /CTA -->
                           </td>
@@ -357,7 +342,7 @@
                                   </v:roundrect>
                                 <![endif]--><a
                                 href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-j5py9"
-                                style="padding:4px;background-color:#ffffff;border:2px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Jewelry</a>
+                                style="padding:4px;background-color:#F2F2F2;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Jewelry</a>
                             </div>
                             <!-- /CTA -->
                           </td>
@@ -384,7 +369,7 @@
                                   </v:roundrect>
                                 <![endif]--><a
                                 href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-ar7wt-hglaw"
-                                style="padding: 4px;background-color:#ffffff;border:2px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Food
+                                style="padding: 4px;background-color:#F2F2F2;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Food
                                 & Drink</a>
                             </div>
                             <!-- /CTA -->
@@ -419,7 +404,7 @@
                               </v:roundrect>
                             <![endif]--><a
                                 href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-ar7wt-hglaw"
-                                style="padding:4px;background-color:#ffffff;border:2px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">LifeStyle</a>
+                                style="padding:4px;background-color:#F2F2F2;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">LifeStyle</a>
                             </div>
                             <!-- /CTA -->
                           </td>
@@ -436,7 +421,7 @@
 
             <!-- Start of Divider -->
             <tr>
-              <td align="center" style="background-color: #FFFFFF;padding: 25px 20px;">
+              <td align="center" style="background-color: #F2F2F2;padding: 25px 20px;">
                 <hr style="border: 2px solid #6DB597;width: 180px;">
               </td>
             </tr>
@@ -445,23 +430,24 @@
 
             <!-- Start of Why Helio? Section -->
             <tr>
-              <td style="padding: 24px;background-color: #FFFFFF;">
+              <td style="padding: 24px;background-color: #F2F2F2;">
                 <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                   <tr>
                     <td>
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
-                        style="max-width: 600px;background-color: #F2F2F2;padding:50px 18px;">
+                        style="max-width: 600px;background-color: #E7E7E7;padding:50px 18px;">
                         <tr>
                           <td align="center">
-                            <h2 style="font-size: 30px;font-family: 'Poppins', sans-serif;color: #000000;">Why Helios?!
+                            <h2 style="font-size: 26px;font-family: 'Poppins', sans-serif;color: #000000;">Why Helios?!
                             </h2>
                           </td>
                         </tr>
                         <tr>
                           <td align="center">
 
-                            <h3 style="font-size: 20px;font-family: 'Poppins', sans-serif;color:#000000;"><img
-                                src="https://i.ibb.co/pZrXzD7/Vector.png" alt="Trophy icon for Expertise"> Expertise:
+                            <h3
+                              style="font-size: 20px;font-weight:500;font-family: 'Poppins', sans-serif;color:#000000;">
+                              <img src="https://i.ibb.co/pZrXzD7/Vector.png" alt="Trophy icon for Expertise"> Expertise:
                             </h3>
                             <p align="center"
                               style="font-size: 18px;font-family: 'Montserrat', sans-serif;color: #000000;line-height: 30px;">
@@ -474,8 +460,10 @@
 
                         <tr>
                           <td align="center">
-                            <h3 style="font-size: 20px;font-family: 'Poppins', sans-serif;color:#000000;"><img
-                                src="https://i.ibb.co/Y3xPj9y/Vector-1.png" alt="HQ icon for Quality"> Quality:</h3>
+                            <h3
+                              style="font-size: 20px;font-weight:500;font-family: 'Poppins', sans-serif;color:#000000;">
+                              <img src="https://i.ibb.co/Y3xPj9y/Vector-1.png" alt="HQ icon for Quality"> Quality:
+                            </h3>
                             <p align="center"
                               style="font-size: 18px;font-family: 'Montserrat', sans-serif;color:#000000;line-height: 24px;">
                               At Helios, we are committed to delivering imagery
@@ -486,9 +474,11 @@
                         </tr>
                         <tr>
                           <td align="center">
-                            <h3 style="font-size: 20px;font-family: 'Poppins', sans-serif;color:#000000;"><img
-                                src="https://i.ibb.co/kgFCXCv/Vector-2.png" alt="Star icon for Versatility">
-                              Versatility:</h3>
+                            <h3
+                              style="font-size: 20px;font-weight:500;font-family: 'Poppins', sans-serif;color:#000000;">
+                              <img src="https://i.ibb.co/kgFCXCv/Vector-2.png" alt="Star icon for Versatility">
+                              Versatility:
+                            </h3>
                             <p align="center"
                               style="font-size: 18px;font-family: 'Montserrat', sans-serif;color:#000000;line-height: 24px;">
                               Whether you're in the fashion industry, food and
@@ -509,7 +499,7 @@
             <tr>
               <td>
                 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
-                  style="padding: 24px;background-color: #FFFFFF;">
+                  style="padding: 24px;background-color: #F2F2F2;">
                   <tr>
                     <td align="center">
                       <!-- CTA -->
@@ -519,7 +509,7 @@
                           <center style="color:#000000;font-family:sans-serif;font-size:13px;font-weight:bold;">Shop Now</center>
                         </v:roundrect>
                       <![endif]--><a href="https://www.heliosproductions.com/contact"
-                          style="padding:8px;background-color:#FF8E04;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:24px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:270px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 16px;">Get
+                          style="padding:8px;background-color:#FF8E04;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:22px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:270px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 16px;">Get
                           Started Today!</a>
                       </div>
                       <!-- /CTA -->
@@ -532,7 +522,7 @@
 
             <!-- Start of Divider -->
             <tr>
-              <td align="center" style="background-color: #FFFFFF;padding: 25px 20px;">
+              <td align="center" style="background-color: #F2F2F2;padding: 25px 20px;">
                 <hr style="border: 2px solid #6DB597;width: 180px;">
               </td>
             </tr>
@@ -542,10 +532,11 @@
             <tr>
               <td>
                 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
-                  style="padding: 24px 40px;background-color: #FFFFFF;">
+                  style="padding: 24px 40px;background-color: #F2F2F2;">
                   <tr>
                     <td align="center">
-                      <h3 style="font-size: 22px;font-family: 'Poppins', sans-serif;color:#000000;">Our Distinguished
+                      <h3 style="font-size: 22px;font-weight:500;font-family: 'Poppins', sans-serif;color:#000000;">Our
+                        Distinguished
                         Clients:</h3>
                       <p align="center"
                         style="font-size: 20px;font-family: 'Montserrat', sans-serif;color:#000000;line-height: 30px;">
@@ -566,7 +557,7 @@
                   <tr>
                     <td align="center">
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
-                        style="padding: 24px 24px 120px 24px;background-color: #FFFFFF;">
+                        style="padding: 24px 24px 120px 24px;background-color: #F2F2F2;">
                         <tr>
                           <td align="center">
                             <img src="https://i.ibb.co/3FytP2Z/aero.jpg" alt="" width="90">
@@ -737,7 +728,7 @@
                         style="max-width: 600px;padding: 40px 0px 50px 0px;">
                         <tr>
                           <td align="center">
-                            <p style="font-size: 16px;font-family: 'Montserrat', sans-serif;color: #222222;">All Rights
+                            <p style="font-size: 14px;font-family: 'Montserrat', sans-serif;color: #222222;">All Rights
                               Reserved. &copy2023 Helio Productions</p>
                           </td>
                         </tr>
