I adjusted the media query to max-width: 380px;

--- a/index.html
+++ b/index.html
@@ -87,10 +87,16 @@
         width: 100% !important;
       }
 
+      table.col {
+        max-width: 600px !important;
+        width: 100% !important;
+        text-align: center !important;
+      }
+
 
     }
 
-    @media only screen and (max-width: 430px) {
+    @media only screen and (max-width: 380px) {
       .container {
         width: 100% !important;
       }
@@ -435,7 +441,7 @@
                   <tr>
                     <td>
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
-                        style="max-width: 600px;background-color: #E7E7E7;padding:50px 18px;">
+                        style="max-width: 600px;background-color: #E7E7E7;padding:50px 46px;">
                         <tr>
                           <td align="center">
                             <h2 style="font-size: 26px;font-family: 'Poppins', sans-serif;color: #000000;">Why Helios?!
@@ -450,7 +456,7 @@
                               <img src="https://i.ibb.co/pZrXzD7/Vector.png" alt="Trophy icon for Expertise"> Expertise:
                             </h3>
                             <p align="center"
-                              style="font-size: 18px;font-family: 'Montserrat', sans-serif;color: #000000;line-height: 30px;">
+                              style="font-size: 18px;font-family: 'Montserrat', sans-serif;color: #000000;line-height: 24px;">
                               Our team of skilled photographers specializes in
                               capturing the
                               essence of a wide range of
