I added the google analytics tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <meta name="supported-color-schemes" content="light dark">
     <!-- SUBJECT LINE GOES BETWEEN title TAGS BELOW-->
     <title>Helios Productions | Helios Brings Your Products to Light</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ0FFVTG9R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-GJ0FFVTG9R');
+    </script>
   </head>
 
   <style type="text/css">
